MODON MRE BPDEV/force-app/main/default/objects/Housing_Application__c/Housing_Application__c.object-meta.xml
<CustomObject>
    <label>Housing Application</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Housing Application Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Housing Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>