MODON MRE BPDEV/force-app/main/default/objects/Housing_Application__c/fields/Application_Number__c.field-meta.xml
<CustomField>
    <fullName>Application_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Application Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>