MODON MRE BPDEV/force-app/main/default/objects/Housing_Application__c/fields/Authority_Notes__c.field-meta.xml
<CustomField>
    <fullName>Authority_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Authority Notes</label>
    <type>TextArea</type>
</CustomField>