MODON MRE BPDEV/force-app/main/default/objects/Housing_Application__c/fields/District__c.field-meta.xml
<CustomField>
    <fullName>District__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>District</label>
    <length>255</length>
    <type>Text</type>
</CustomField>