MODON MRE BPDEV/force-app/main/default/objects/Housing_Application__c/fields/LoanValue__c.field-meta.xml
<CustomField>
    <fullName>LoanValue__c</fullName>
    <label>Loan Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>