MODON MRE BPDEV/force-app/main/default/objects/Housing_Application__c/fields/Municipality__c.field-meta.xml
<CustomField>
    <fullName>Municipality__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Municipality</label>
    <length>255</length>
    <type>Text</type>
</CustomField>