MODON MRE BPDEV/force-app/main/default/objects/Housing_Application__c/fields/Number_of_Wives__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Wives__c</fullName>
    <label>Number of Wives</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>