MODON MRE BPDEV/force-app/main/default/objects/Housing_Application__c/fields/Passport_expiry_date__c.field-meta.xml
<CustomField>
    <fullName>Passport_expiry_date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Passport Expiry Date</label>
    <type>Date</type>
</CustomField>