MODON MRE BPDEV/force-app/main/default/objects/Housing_Application__c/fields/Passport_Number__c.field-meta.xml
<CustomField>
    <fullName>Passport_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Passport Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>