MODON MRE BPDEV/force-app/main/default/objects/Housing_Application__c/fields/Town_Name__c.field-meta.xml
<CustomField>
    <fullName>Town_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Town Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>