MODON MRE BPDEV/force-app/main/default/objects/Housing_Application__c/fields/Tribe__c.field-meta.xml
<CustomField>
    <fullName>Tribe__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tribe</label>
    <length>100</length>
    <type>Text</type>
</CustomField>